2010-11-04  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        TypedArray should throw exception if length not a multiple of element size
        https://bugs.webkit.org/show_bug.cgi?id=45487

        * bindings/js/JSArrayBufferViewHelper.h:
        (WebCore::constructArrayBufferView):
        * bindings/v8/custom/V8ArrayBufferViewCustom.h:
        (WebCore::constructWebGLArray):
2010-11-04  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        TypedArray should throw exception if length not a multiple of element size
        https://bugs.webkit.org/show_bug.cgi?id=45487

        * fast/canvas/webgl/array-unit-tests-expected.txt:
        * fast/canvas/webgl/array-unit-tests.html: Test against the non-multiplication exception behavior.
        * fast/canvas/webgl/gl-enum-tests-expected.txt:
        * fast/canvas/webgl/gl-enum-tests.html: Fix the ArrayBuffer size so it won't throw an error with this patch.


Canonical link: https://commits.webkit.org/61859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71371 268f45cc-cd09-0410-ab3c-d52691b4dbfc